--- a/blogpost.html
+++ b/blogpost.html
@@ -1,1 +1,13 @@
-        
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Este es el titulo del post</title>
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+    <h1>este es el title del post</h1>
+    <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
+</body>
+</html>
