git commit al blogpost al master mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    <h1>este es el title del post</h1>
-    <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
+    <div class="container">
+        <div id="post">
+            <h1>este es el title del post</h1>
+            <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
+
+        </div>
+    </div>
 </body>
 </html>
