--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div id="post">
             <div id="cabecera">
-                <h1>cabecera</h1>
+                <h1>SUPERBLOG <span id="tagline">el blog master de git & github</span> </h1>
             </div>
             <h1>este es el title del post</h1>
             <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
