--- a/blogpost.html
+++ b/blogpost.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Este es el titulo del post</title>
+    <title>WELCOME HYPERBLOG</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <div class="container">
         <div id="post">
             <div id="cabecera">
-                <h1>SUPERBLOG <span id="tagline">el blog master</span> </h1>
+                <h1>Welcome SuperBlog <span id="tagline">el blog master</span> </h1>
             </div>
             <h1>este es el title del post</h1>
             <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
