--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <div id="cabecera">
+            <img id="logo" src="/assets/GitHubLogo-676x251.png" alt="logogithub">
+            Welcome SuperBlog V__2.0 <span id="tagline">el blog master</span> </h1>
+        </div>
         <div id="post">
-            <div id="cabecera">
-                <h1>Welcome SuperBlog V__2.0 <span id="tagline">el blog master</span> </h1>
-            </div>
             <h1>este es el title del post</h1>
             <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reiciendis culpa itaque, obcaecati distinctio atque harum asperiores exercitationem, blanditiis earum ipsam facere? Quae molestias iste, porro vel ab aut culpa?</p>
