--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <p>este el parrafo del post Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, amet laudantium voluptatem ex eligendi iusto harum rerum nesciunt quo ipsam accusantium perspiciatis aliquam enim vel, inventore aut facere, incidunt quasi.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt reiciendis culpa itaque, obcaecati distinctio atque harum asperiores exercitationem, blanditiis earum ipsam facere? Quae molestias iste, porro vel ab aut culpa?</p>
             <button class="button_green">suscribete y dale me gusta mucho!!!</button>
+            <button class="button_gray">agregar una sugerencia</button>
             <div id="footer">
                 hecho con amor por Juanomora💙💙
             </div>
